Changelog for s6.

In 2.10.1.0
-----------

 - Bugfixes.
 - s6-svwait now supports -r and -R options to wait for restarts.


In 2.10.0.3
-----------

 - Bugfixes.


In 2.10.0.2
-----------

 - Bugfixes.


In 2.10.0.1
-----------

 - Bugfixes.


In 2.10.0.0
-----------

 - Bugfixes.
 - Changes to s6-svscan and s6-svscanctl: the list of commands
that can be sent to s6-svscan has been thoroughly cleaned up.
s6-svscan now scans and prunes on SIGHUP.
 - Changes to s6-supervise and s6-svc: -X not supported anymore,
nosetsid not supported anymore. SIGHUP now properly closes
stdin/stdout to allow the service to naturally exit on EOF;
SIGQUIT semantics changed to immediately bail. SIGINT is now
trapped and forwarded to the service's process group.
 - New binary: s6-svperms, implementing a split permissions
model. (By default, everything is the same as before.)
 - New binary: s6-usertree-maker, creating service directories
for supervision trees managed by users.


In 2.9.2.0
----------

 - Bugfixes.
 - New -d option to s6-sudod.


In 2.9.1.0
----------

 - Bugfixes.
 - execline support is now optional. Some functionality is not available
when execline support is disabled.
 - New '?' directive to s6-log, to spawn a processor with /bin/sh.
 - New console holder functionality for easier s6-svscan-log support.
 - On systems that define SIGPWR and SIGWINCH, s6-svscan -s now calls
a user handler for those signals.


In 2.9.0.1
----------

 - Bugfixes.


In 2.9.0.0
----------

 - Bugfixes.
 - Adaptation to skalibs-2.9.0.0.
 - The s6-fdholder-*c programs have been removed. They were unused: the
separation between (for instance) s6-fdholder-store and s6-fdholder-storec
added more complexity and more code than it brought benefits. The s6
package is now 7 binaries leaner.


In 2.8.0.1
----------

 - Bugfixes.


In 2.8.0.0
----------

 - Bugfixes.
 - Adaptation to skalibs-2.8.0.0.
 - s6-log can now notify readiness with the new -d option.
 - s6-log now has a default line limit of 8 kB.