@@ -5,6 +5,8 @@ In 2.10.1.0
 
  - Bugfixes.
  - s6-svwait now supports -r and -R options to wait for restarts.
+ - New service directory file: lock-fd, to take a lock before
+starting a service, protecting against concurrent instances.
 
 
 In 2.10.0.3
